tests/construct/unnamed_fields_fail.rs
use ruva::TConstruct;

#[derive(TConstruct)]
struct TupleStruct(String, i32);

fn main() {}
